s3: nmbd: Ensure we only set work_changed = true if we modify the record.

https://bugzilla.samba.org/show_bug.cgi?id=11254

Signed-off-by: Jeremy Allison <jra@samba.org>
Reviewed-by: Andreas Schneider <asn@samba.org>
(cherry picked from commit db6572ef80e20b0e577b9e9fb5d233f8bdd20713)